applications/workplace-type-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workplace-type-test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - workplace-type-test.prod.kro.kr
    secretName: workplace-type-test-letsencrypt
  rules:
  - host: workplace-type-test.prod.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workplace-type-test
            port:
              number: 80
